sandbox/output
fizzbuzz.c: In function 'fizzBuzzSeq':
fizzbuzz.c:26:23: error: unused parameter 'val' [-Werror=unused-parameter]
 char* fizzBuzzSeq(int val)
                       ^
cc1: all warnings being treated as errors
make: *** [test] Error 1
